Modified the pom.xml and sub-project's pom.xml